Answer question js update
--answer question form is hidden by default
--added button that toggles form visibility

--- a/Forum/ForumStyles/css/custom-css.css
+++ b/Forum/ForumStyles/css/custom-css.css
@@ -8,3 +8,14 @@ body div.info{
     background-color: #00a732;
     color: #ffffff;
 }
+
+body div.answer-form{
+    display: none;
+}
+.answer-button-wrapper{
+    text-align: center;
+}
+#answer-button{
+    padding: 20px;
+    font-size: 1.2em;
+}
