--- a/Forum/ForumStyles/css/custom-css.css
+++ b/Forum/ForumStyles/css/custom-css.css
@@ -23,3 +23,11 @@ body div.container>a.current-page{
     color: dodgerblue;
     font-weight: bold;
 }
+body div>a.forum-tag{
+    background-color: rgba(211, 178, 89, 0.69);
+    color: #ffffff;
+    border-radius: 10px;
+    text-decoration: none;
+    font-size: 0.9em;
+    padding: 2px;
+}
